; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mvs/extr_mvs.c_mvs_reset.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mvs/extr_mvs.c_mvs_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mvs_channel = type { i32, i64, i32, i32, i32, i32, i32, i64, i64, i64, i32, i32**, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@bootverbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"MVS reset...\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@MVS_EDMA_OFF = common dso_local global i32 0, align 4
@DMA_C = common dso_local global i32 0, align 4
@MVS_MAX_SLOTS = common dso_local global i32 0, align 4
@MVS_SLOT_RUNNING = common dso_local global i64 0, align 8
@MVS_ERR_INNOCENT = common dso_local global i32 0, align 4
@AC_BUS_RESET = common dso_local global i32 0, align 4
@EDMA_IEM = common dso_local global i32 0, align 4
@EDMA_CMD = common dso_local global i32 0, align 4
@EDMA_CMD_EATARST = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"MVS reset: device not found\0A\00", align 1
@SATA_SE = common dso_local global i32 0, align 4
@EDMA_IEC = common dso_local global i32 0, align 4
@EDMA_IE_TRANSIENT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"MVS reset: device found\0A\00", align 1
@ATA_S_BUSY = common dso_local global i32 0, align 4
@ATA_S_DRQ = common dso_local global i32 0, align 4
@dumping = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [43 x i8] c"MVS reset: device not ready after 31000ms\0A\00", align 1
@.str.4 = private unnamed_addr constant [36 x i8] c"MVS reset: device ready after %dms\0A\00", align 1
@hz = common dso_local global i32 0, align 4
@mvs_reset_to = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @mvs_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mvs_reset(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.mvs_channel*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.mvs_channel* @device_get_softc(i32 %5)
  store %struct.mvs_channel* %6, %struct.mvs_channel** %3, align 8
  %7 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %8 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @xpt_freeze_simq(i32 %9, i32 1)
  %11 = load i64, i64* @bootverbose, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %2, align 4
  %15 = call i32 (i32, i8*, ...) @device_printf(i32 %14, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %1
  %17 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %18 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %32

21:                                               ; preds = %16
  %22 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %23 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %22, i32 0, i32 0
  store i32 0, i32* %23, align 8
  %24 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %25 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %24, i32 0, i32 4
  %26 = call i32 @callout_stop(i32* %25)
  %27 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %28 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %27, i32 0, i32 3
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @TRUE, align 4
  %31 = call i32 @xpt_release_simq(i32 %29, i32 %30)
  br label %32

32:                                               ; preds = %21, %16
  %33 = load i32, i32* %2, align 4
  %34 = call i32 @mvs_requeue_frozen(i32 %33)
  %35 = load i32, i32* %2, align 4
  %36 = load i32, i32* @MVS_EDMA_OFF, align 4
  %37 = call i32 @mvs_set_edma_mode(i32 %35, i32 %36)
  %38 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %39 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %38, i32 0, i32 5
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* @DMA_C, align 4
  %42 = call i32 @ATA_OUTL(i32 %40, i32 %41, i32 0)
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %68, %32
  %44 = load i32, i32* %4, align 4
  %45 = load i32, i32* @MVS_MAX_SLOTS, align 4
  %46 = icmp slt i32 %44, %45
  br i1 %46, label %47, label %71

47:                                               ; preds = %43
  %48 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %49 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %48, i32 0, i32 12
  %50 = load %struct.TYPE_2__*, %struct.TYPE_2__** %49, align 8
  %51 = load i32, i32* %4, align 4
  %52 = sext i32 %51 to i64
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %50, i64 %52
  %54 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = load i64, i64* @MVS_SLOT_RUNNING, align 8
  %57 = icmp slt i64 %55, %56
  br i1 %57, label %58, label %59

58:                                               ; preds = %47
  br label %68

59:                                               ; preds = %47
  %60 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %61 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %60, i32 0, i32 12
  %62 = load %struct.TYPE_2__*, %struct.TYPE_2__** %61, align 8
  %63 = load i32, i32* %4, align 4
  %64 = sext i32 %63 to i64
  %65 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %62, i64 %64
  %66 = load i32, i32* @MVS_ERR_INNOCENT, align 4
  %67 = call i32 @mvs_end_transaction(%struct.TYPE_2__* %65, i32 %66)
  br label %68

68:                                               ; preds = %59, %58
  %69 = load i32, i32* %4, align 4
  %70 = add nsw i32 %69, 1
  store i32 %70, i32* %4, align 4
  br label %43

71:                                               ; preds = %43
  store i32 0, i32* %4, align 4
  br label %72

72:                                               ; preds = %105, %71
  %73 = load i32, i32* %4, align 4
  %74 = load i32, i32* @MVS_MAX_SLOTS, align 4
  %75 = icmp slt i32 %73, %74
  br i1 %75, label %76, label %108

76:                                               ; preds = %72
  %77 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %78 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %77, i32 0, i32 11
  %79 = load i32**, i32*** %78, align 8
  %80 = load i32, i32* %4, align 4
  %81 = sext i32 %80 to i64
  %82 = getelementptr inbounds i32*, i32** %79, i64 %81
  %83 = load i32*, i32** %82, align 8
  %84 = icmp ne i32* %83, null
  br i1 %84, label %86, label %85

85:                                               ; preds = %76
  br label %105

86:                                               ; preds = %76
  %87 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %88 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %87, i32 0, i32 11
  %89 = load i32**, i32*** %88, align 8
  %90 = load i32, i32* %4, align 4
  %91 = sext i32 %90 to i64
  %92 = getelementptr inbounds i32*, i32** %89, i64 %91
  %93 = load i32*, i32** %92, align 8
  %94 = call i32 @xpt_done(i32* %93)
  %95 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %96 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %95, i32 0, i32 11
  %97 = load i32**, i32*** %96, align 8
  %98 = load i32, i32* %4, align 4
  %99 = sext i32 %98 to i64
  %100 = getelementptr inbounds i32*, i32** %97, i64 %99
  store i32* null, i32** %100, align 8
  %101 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %102 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %101, i32 0, i32 10
  %103 = load i32, i32* %102, align 8
  %104 = add nsw i32 %103, -1
  store i32 %104, i32* %102, align 8
  br label %105

105:                                              ; preds = %86, %85
  %106 = load i32, i32* %4, align 4
  %107 = add nsw i32 %106, 1
  store i32 %107, i32* %4, align 4
  br label %72

108:                                              ; preds = %72
  %109 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %110 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %109, i32 0, i32 1
  %111 = load i64, i64* %110, align 8
  %112 = icmp ne i64 %111, 0
  br i1 %112, label %113, label %119

113:                                              ; preds = %108
  %114 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %115 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %114, i32 0, i32 3
  %116 = load i32, i32* %115, align 4
  %117 = load i32, i32* @TRUE, align 4
  %118 = call i32 @xpt_release_simq(i32 %116, i32 %117)
  br label %119

119:                                              ; preds = %113, %108
  %120 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %121 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %120, i32 0, i32 9
  store i64 0, i64* %121, align 8
  %122 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %123 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %122, i32 0, i32 1
  store i64 0, i64* %123, align 8
  %124 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %125 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %124, i32 0, i32 8
  store i64 0, i64* %125, align 8
  %126 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %127 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %126, i32 0, i32 7
  store i64 0, i64* %127, align 8
  %128 = load i32, i32* @AC_BUS_RESET, align 4
  %129 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %130 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %129, i32 0, i32 6
  %131 = load i32, i32* %130, align 8
  %132 = call i32 @xpt_async(i32 %128, i32 %131, i32* null)
  %133 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %134 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %133, i32 0, i32 5
  %135 = load i32, i32* %134, align 4
  %136 = load i32, i32* @EDMA_IEM, align 4
  %137 = call i32 @ATA_OUTL(i32 %135, i32 %136, i32 0)
  %138 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %139 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %138, i32 0, i32 5
  %140 = load i32, i32* %139, align 4
  %141 = load i32, i32* @EDMA_CMD, align 4
  %142 = load i32, i32* @EDMA_CMD_EATARST, align 4
  %143 = call i32 @ATA_OUTL(i32 %140, i32 %141, i32 %142)
  %144 = call i32 @DELAY(i32 25)
  %145 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %146 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %145, i32 0, i32 5
  %147 = load i32, i32* %146, align 4
  %148 = load i32, i32* @EDMA_CMD, align 4
  %149 = call i32 @ATA_OUTL(i32 %147, i32 %148, i32 0)
  %150 = load i32, i32* %2, align 4
  %151 = call i32 @mvs_errata(i32 %150)
  %152 = load i32, i32* %2, align 4
  %153 = call i32 @mvs_sata_phy_reset(i32 %152)
  %154 = icmp ne i32 %153, 0
  br i1 %154, label %186, label %155

155:                                              ; preds = %119
  %156 = load i64, i64* @bootverbose, align 8
  %157 = icmp ne i64 %156, 0
  br i1 %157, label %158, label %161

158:                                              ; preds = %155
  %159 = load i32, i32* %2, align 4
  %160 = call i32 (i32, i8*, ...) @device_printf(i32 %159, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  br label %161

161:                                              ; preds = %158, %155
  %162 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %163 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %162, i32 0, i32 2
  store i32 0, i32* %163, align 8
  %164 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %165 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %164, i32 0, i32 5
  %166 = load i32, i32* %165, align 4
  %167 = load i32, i32* @SATA_SE, align 4
  %168 = call i32 @ATA_OUTL(i32 %166, i32 %167, i32 -1)
  %169 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %170 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %169, i32 0, i32 5
  %171 = load i32, i32* %170, align 4
  %172 = load i32, i32* @EDMA_IEC, align 4
  %173 = call i32 @ATA_OUTL(i32 %171, i32 %172, i32 0)
  %174 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %175 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %174, i32 0, i32 5
  %176 = load i32, i32* %175, align 4
  %177 = load i32, i32* @EDMA_IEM, align 4
  %178 = load i32, i32* @EDMA_IE_TRANSIENT, align 4
  %179 = xor i32 %178, -1
  %180 = call i32 @ATA_OUTL(i32 %176, i32 %177, i32 %179)
  %181 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %182 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %181, i32 0, i32 3
  %183 = load i32, i32* %182, align 4
  %184 = load i32, i32* @TRUE, align 4
  %185 = call i32 @xpt_release_simq(i32 %183, i32 %184)
  br label %259

186:                                              ; preds = %119
  %187 = load i64, i64* @bootverbose, align 8
  %188 = icmp ne i64 %187, 0
  br i1 %188, label %189, label %192

189:                                              ; preds = %186
  %190 = load i32, i32* %2, align 4
  %191 = call i32 (i32, i8*, ...) @device_printf(i32 %190, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  br label %192

192:                                              ; preds = %189, %186
  %193 = load i32, i32* %2, align 4
  %194 = load i32, i32* @ATA_S_BUSY, align 4
  %195 = load i32, i32* @ATA_S_DRQ, align 4
  %196 = or i32 %194, %195
  %197 = load i64, i64* @dumping, align 8
  %198 = icmp ne i64 %197, 0
  %199 = zext i1 %198 to i64
  %200 = select i1 %198, i32 31000, i32 0
  %201 = call i32 @mvs_wait(i32 %193, i32 0, i32 %196, i32 %200)
  store i32 %201, i32* %4, align 4
  %202 = icmp slt i32 %201, 0
  br i1 %202, label %203, label %213

203:                                              ; preds = %192
  %204 = load i64, i64* @dumping, align 8
  %205 = icmp ne i64 %204, 0
  br i1 %205, label %206, label %209

206:                                              ; preds = %203
  %207 = load i32, i32* %2, align 4
  %208 = call i32 (i32, i8*, ...) @device_printf(i32 %207, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.3, i64 0, i64 0))
  br label %212

209:                                              ; preds = %203
  %210 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %211 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %210, i32 0, i32 0
  store i32 310, i32* %211, align 8
  br label %212

212:                                              ; preds = %209, %206
  br label %221

213:                                              ; preds = %192
  %214 = load i64, i64* @bootverbose, align 8
  %215 = icmp ne i64 %214, 0
  br i1 %215, label %216, label %220

216:                                              ; preds = %213
  %217 = load i32, i32* %2, align 4
  %218 = load i32, i32* %4, align 4
  %219 = call i32 (i32, i8*, ...) @device_printf(i32 %217, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.4, i64 0, i64 0), i32 %218)
  br label %220

220:                                              ; preds = %216, %213
  br label %221

221:                                              ; preds = %220, %212
  %222 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %223 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %222, i32 0, i32 2
  store i32 1, i32* %223, align 8
  %224 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %225 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %224, i32 0, i32 5
  %226 = load i32, i32* %225, align 4
  %227 = load i32, i32* @SATA_SE, align 4
  %228 = call i32 @ATA_OUTL(i32 %226, i32 %227, i32 -1)
  %229 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %230 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %229, i32 0, i32 5
  %231 = load i32, i32* %230, align 4
  %232 = load i32, i32* @EDMA_IEC, align 4
  %233 = call i32 @ATA_OUTL(i32 %231, i32 %232, i32 0)
  %234 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %235 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %234, i32 0, i32 5
  %236 = load i32, i32* %235, align 4
  %237 = load i32, i32* @EDMA_IEM, align 4
  %238 = load i32, i32* @EDMA_IE_TRANSIENT, align 4
  %239 = xor i32 %238, -1
  %240 = call i32 @ATA_OUTL(i32 %236, i32 %237, i32 %239)
  %241 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %242 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %241, i32 0, i32 0
  %243 = load i32, i32* %242, align 8
  %244 = icmp ne i32 %243, 0
  br i1 %244, label %245, label %253

245:                                              ; preds = %221
  %246 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %247 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %246, i32 0, i32 4
  %248 = load i32, i32* @hz, align 4
  %249 = sdiv i32 %248, 10
  %250 = load i32, i32* @mvs_reset_to, align 4
  %251 = load i32, i32* %2, align 4
  %252 = call i32 @callout_reset(i32* %247, i32 %249, i32 %250, i32 %251)
  br label %259

253:                                              ; preds = %221
  %254 = load %struct.mvs_channel*, %struct.mvs_channel** %3, align 8
  %255 = getelementptr inbounds %struct.mvs_channel, %struct.mvs_channel* %254, i32 0, i32 3
  %256 = load i32, i32* %255, align 4
  %257 = load i32, i32* @TRUE, align 4
  %258 = call i32 @xpt_release_simq(i32 %256, i32 %257)
  br label %259

259:                                              ; preds = %161, %253, %245
  ret void
}

declare dso_local %struct.mvs_channel* @device_get_softc(i32) #1

declare dso_local i32 @xpt_freeze_simq(i32, i32) #1

declare dso_local i32 @device_printf(i32, i8*, ...) #1

declare dso_local i32 @callout_stop(i32*) #1

declare dso_local i32 @xpt_release_simq(i32, i32) #1

declare dso_local i32 @mvs_requeue_frozen(i32) #1

declare dso_local i32 @mvs_set_edma_mode(i32, i32) #1

declare dso_local i32 @ATA_OUTL(i32, i32, i32) #1

declare dso_local i32 @mvs_end_transaction(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @xpt_done(i32*) #1

declare dso_local i32 @xpt_async(i32, i32, i32*) #1

declare dso_local i32 @DELAY(i32) #1

declare dso_local i32 @mvs_errata(i32) #1

declare dso_local i32 @mvs_sata_phy_reset(i32) #1

declare dso_local i32 @mvs_wait(i32, i32, i32, i32) #1

declare dso_local i32 @callout_reset(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
